sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:6: error: illegal start of simple expression
    for (i<-){
            ^AlgShellSort:16: error: ')' expected but '}' found.
  }
  ^